[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptography"
dynamic = ["version"]
description = ""
authors = [
    {name="Dominik Galus", email="dominikgalus9@gmail.com"} 
    ]
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "numpy==2.0.1",
    "pytest==8.3.2"
]

[project.scripts]
key-gen = "cryptography.cli.key_gen:generate_key_to_file"

[project.urls]
Homepage = "https://github.com/Dominik-Galus/Cryptography"
Repository = "https://github.com/Dominik-Galus/Cryptography/"
Issues = "https://github.com/Dominik-Galus/Cryptography/issues"

[tool.ruff]
select = ["ALL"]